Updated header colors for legibility. Tweaked item hover state colors. Updated popup. Revised item structure and style to workaround issues in IE.
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-plugins/cf-calendar/trunk@18859 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/css/content.css
+++ b/css/content.css
@@ -1,9 +1,17 @@
-.cfcal-calendar td {
-	border:1px solid #D5D5D5;
+table.cfcal-calendar {
+	border:1px solid #aaa;
+	border-collapse:collapse;
+}
+.cfcal-calendar tr td {
+	border:1px solid #aaa;
+}
+
+.cfcal-calendar thead th {
+	border:1px solid #aaa;
 }
 .cfcal-calendar thead td,
 .cfcal-calendar tfoot td {
-	background-color:#D5D5D5;
+	background-color:#eee;
 }
 .cfcal-calendar tbody td {
 	height:160px;
@@ -14,7 +22,7 @@
 	background-color:#FFFEED;
 }
 .cfcal-today-title {
-	color:#639ABA;
+	color:#21759b;
 }
 .cfcal-day-title {
 	text-align:right;
@@ -35,36 +43,34 @@
 	-khtml-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-	border:1px solid #e3e3e3;
+	border:1px solid #aaa;
 	padding:3px 6px;
 	text-decoration:none;
 	color:#21759B;
 	font-weight:bold;
 	margin-right:1px;
 }
-
 .cfcal-navigation a:hover {
 	color: #d54e21;
 	border-color: #d54321;
 }
-
 .cfcal-navigation a:active {
 	color: #fff !important;
 }
 
 .cfcal-day-title-open-day img {
+	cursor:pointer;
+	-khtml-opacity: 0.5;
+	-moz-opacity:0.5;
+	filter:alpha(opacity=50);
+	opacity: 0.5;
 	padding-right:2px;
 	vertical-align:middle;
-	filter:alpha(opacity=50);
-	-moz-opacity:0.5;
-	-khtml-opacity: 0.5;
-	opacity: 0.5;
 }
-
 .cfcal-day-title-open-day img:hover {
-	filter:alpha(opacity=100);
 	-moz-opacity:1;
 	-khtml-opacity: 1;
+	filter:alpha(opacity=100);
 	opacity: 1;
 }
 
@@ -73,21 +79,28 @@
 	overflow:hidden;
 	height:125px;
 }
-li.cf-posts {
-}
 
 .cfcal-list li {
-	white-space:nowrap;
-	cursor:pointer;
-	margin-bottom:2px;
-	-moz-border-radius: 4px;
 	-khtml-border-radius: 4px;
+	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
+	cursor:pointer;
+	line-height:15px;
+	margin-bottom:2px;
+	overflow:hidden;
+	white-space:nowrap;
+	zoom:1; /* for IE */
 }
-
-.cfcal-list span {
-	padding:4px;
+.cfcal-list li a {
+	padding:1px 2px;
+}
+.cfcal-list li a,
+.cfcal-list li a:visited,
+.cfcal-list li a:focus,
+.cfcal-list li a:hover,
+.cfcal-list li a:active {
+	color:#000;
 }
 
 .cfcal-day-more {
@@ -103,15 +116,15 @@ li.cf-posts {
 }
 
 .cfcal-day-edit-link {
+	-khtml-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 	float:right;
 	height:15px;
 	line-height:15px;
-	width:30px;
 	text-align:center;
-	-moz-border-radius: 4px;
-	-khtml-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;
+	width:20px;
 }
 .cfcal-day-edit-link img {
 	padding:2px 0 3px;
@@ -120,11 +133,10 @@ li.cf-posts {
 	background-color:black;
 }
 
-.cfcal-list li:hover {
-/*	background-image:url(../wp-content/plugins/cf-calendar/images/pencil_big_right.png);
-	background-position:center right;
-	background-repeat:no-repeat;
-*/
+.cfcal-list li a.cfcal-day-item-title {
+	display:block;
+	overflow:hidden;
+	padding-right:24px;
 }
 
 /* Show/Hide Section
@@ -174,11 +186,11 @@ li.cf-posts {
 
 .cfcal-status-publish,
 .cfcal-publish-color {
-	background-color:#CEECC8;
+	background-color:#C5EFAF;
 }
 .cfcal-status-publish:hover,
 .cfcal-publish-color:hover {
-	background-color:#9EB899;
+	background-color:#BBDC9C;
 }
 
 .cfcal-status-draft,
@@ -187,5 +199,5 @@ li.cf-posts {
 }
 .cfcal-status-draft:hover,
 .cfcal-draft-color:hover {
-	background-color:#B68B81;
+	background-color:#E9B19E;
 }
